--- a/LAB/Lab2/lab2page1.html
+++ b/LAB/Lab2/lab2page1.html
@@ -4,20 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lab2</title>
+    <link rel="stylesheet" type="text/css" href="./lab2page1.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/b/b1/IBU_logo_reb-02-01.png" width="50" height="33">
-    <h2>International Burch University</h2>
-    <h1>Login Page</h1>
-    <p>Welcome</p>
-    <p>Please Login</p>
-    <h3>Email</h3>
-    <textarea id="Email" name="Email">Enter your email </textarea><br>
-    <h3>Password</h3>
-    <textarea id="Password" name="Password">Enter your password </textarea><br>
-    <p>Don't have an acount?</p>
-    <a href="http://localhost/FOFWD-PROJECT/lab2/lab2page2.html">Register NOW</a><br>
-    <a href="http://localhost/FOFWD-PROJECT/lab2/lab2page3.html">Forgot your password?</a><br>
-    <a href="http://localhost/FOFWD-PROJECT/lab2/lab2page4.html">SUBMIT</a><br>
+    <div align="center">
+        <div id="m_okvir" style="margin:auto;display:block">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/b/b1/IBU_logo_reb-02-01.png" style="margin:auto;display:block">
+        <h2 style="text-align:center">International Burch University
+       <div class="m_uvuceno"> <h1>Login page</h1>
+        <p>Welcome</p>
+        <p>Please Login</p>
+        <form action="http://logedin.html" target="_blank">
+           <label for="m_email">Email:</label> <br>
+           <input type="text" id="m_email" name="email"> <br>
+          <br> <label for="m_password">Password:</label> <br>
+           <input type="password" id="m_password" name="password">
+        </form></div>
+         <div class="m_center"> <br> <span>Don&#39;t have an account?</span><br>
+           <a href="http://localhost/FOFWD-PROJECT/LAB/lab2/lab2page2.html">Register NOW</a> <br><br>
+           <a href="http://localhost/FOFWD-PROJECT/LAB/lab2/lab2page3.html">Forgot your password?</a><br><br>
+            <input id="m_button" type="submit" value="Submit">
+        </div>
+      </h2></div>
+        
+    </div>
 </body>
 </html>
