--- a/LAB/Lab2/lab2page4.html
+++ b/LAB/Lab2/lab2page4.html
@@ -4,29 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lab2</title>
+    <link rel="stylesheet" type="text/css" href="./lab2page4.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/b/b1/IBU_logo_reb-02-01.png" width="200" height="133">
-    <h2>International Burch University</h2>
-    <h1 style="color:blue">Welcome back dear student!</h1>
-    <p>Registerd corses:</p>
-    <table style="width: 100%;">
-        <tr>
-          <th>Corse code</th>
-          <th>Corse name</th>
-          <th>ETCS</th>
-        </tr>
-        <tr>
-          <td>FENMS 035</td>
-          <td>Fundations of Fronted Web Development</td>
-          <td>5.0</td>
-        </tr>
-        <tr>
-          <td>IT 101</td>
-          <td>Deatbase Desing and Implementation</td>
-          <td>6.0</td>
-        </tr>
-      </table>
-
+  <div align="center">
+    <div id="m_okvir" style="margin:auto;display:block;text-align:center">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/b/b1/IBU_logo_reb-02-01.png" style="margin:auto;display:block">
+        <h2 style="color:darkblue">Welcome back dear student!
+<div class="m_left">
+        <h1>Registered courses:</h1>
+    </div>
+        <table style="border:1px solid;border-width:medium;border-collapse:collapse;margin:auto">
+            <tr>
+                <th style="border:1px solid;border-width:medium;border-collapse:collapse;padding:20px">Course code</th>
+                <th style="border:1px solid;border-width:medium;border-collapse:collapse;padding:20px">Course Name</th>
+                <th style="border:1px solid;border-width:medium;border-collapse:collapse;padding:20px">ECTS</th>
+            </tr>
+       <tr>
+        <td style="border:1px solid;border-width:medium;border-collapse:collapse;padding:20px">FENMS 035</td>
+        <td style="border:1px solid;border-width:medium;border-collapse:collapse;padding:20px">Foundations of <br> Frontend Web<br> Development</td>
+        <td style="border:1px solid;border-width:medium;border-collapse:collapse;padding:20px">5.0</td>
+       </tr>
+       <tr>
+        <td style="border:1px solid;border-width:medium;border-collapse:collapse;padding:20px">IT 101</td>
+        <td style="border:1px solid;border-width:medium;border-collapse:collapse;padding:20px">Database<br> Design and<br>Implementation</td>
+        <td style="border:1px solid;border-width:medium;border-collapse:collapse;padding:20px">6.0</td>
+       </tr>
+        </table>
+</h2></div>
+ </div>
 </body>
 </html>
