--- a/LAB/Lab2/lab2page2.html
+++ b/LAB/Lab2/lab2page2.html
@@ -4,42 +4,68 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lab2</title>
+    <link rel="stylesheet" type="text/css" href="./lab2page2.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/b/b1/IBU_logo_reb-02-01.png" width="50" height="33">
-    <h2>International Burch University</h2>
-    <h1>REGISTRATION FORM</h1>
-    <p>Frstname:</p>
-    <textarea id="Frstname:" name="Frstname:">Enter your firstname </textarea><br>
-    <p>Lastname:</p>
-    <textarea id="Lastname:" name="Lastname:">Enter your lastname </textarea><br>
-    <p>Username:</p>
-    <textarea id="Username:" name="Username:"> </textarea><br>
-    <p>Password:</p>
-    <textarea id="password:" name="Password:"> </textarea><br>
-    <p>Date of birth:</p>
-    <textarea id="Date of birth:" name="Date of birth:">dd ----- yyyy </textarea><br>
-    <p>Gender:</p>
-    <input type="radio" value="Male">
-    <label for="Mele">Male</label><br>
-    <input type="radio" value="Female">
-    <label for="Female">Female</label><br>
-    <input type="radio" value="Other">
-    <label for="Other">Other</label>
-    <p>Email:</p>
-    <textarea id="Email:" name="Email:"> </textarea><br>
-    <p>Phone:</p>
-    <textarea id="Phone:" name="Phone:"> </textarea><br>
-    <p>Hair color:</p>
-    <textarea id="Hair color:" name="Hair color:"> </textarea><br>
-    <form action="/action_page.php">
-        <p><label for="notes">Notes:</label></p>
-        <textarea id="notes:" name="notes:" rows="4" cols="50"> </textarea>
+    <div>
+        <div id="m_okvir" style="margin:auto;display:block">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/b/b1/IBU_logo_reb-02-01.png">
+        <h2>International Burch University
+        <h1>REGISTRATION FORM</h1>
+        <form action="http://login.html" target="_blank">
+          <div class="m_drzac">
+          <div class="m_prva_kolona">
+           <label>Firstname:</label>
+           <input type="text" id="m_firstname" name="firstname"> <br>
+           <label>Password:</label> 
+           <label>Date of birth:</label> 
+           <label>Place of birth:</label> 
+           <label style="margin-bottom:95px">Gender:</label> 
+           <label>Email:</label> 
+           <label style="margin-bottom:30px">Phone:</label> 
+           <label>Hair  color:</label>
+           <label for="m_">Notes:</label>
+          </div>
+          <div class="m_druga_kolona">
+           <label>Lastname:</label> 
+           <input type="text" id="m_lastname" name="lastname"> <br>
+           <input type="password" id="m_password" name="password"> <br>
+           <input type="date" id="m_date" name="date"> <br>
+           <input type="text" id="m_place" name="place"><br>
+           <label style="margin:0px">
+            <input type="radio" name="gender" value="male">
+            Male
+        </label>
         <br>
-        <input type="checkbox" value="recive notifications">
-        <label for="recive notifications">Recive notifications</label><br>
-        <input type="register" value="Register">
-      </form>
-
+        <label style="margin:0px">
+            <input type="radio" name="gender" value="female">
+            Female
+        </label>
+        <br>
+        <label style="margin:0px">
+            <input type="radio" name="gender" value="other">
+            Other
+        </label> <br>
+           <input type="text" id="m_email" name="email"> <br>
+           <input type="text" id="m_phone" name="phone"> <br>
+          <br>
+            <input type="color" id="m_color" name="color"> <br>
+          </div>
+        </div>
+            <br>
+            <textarea id="m_textbox" name="textbox" rows="4" cols="50"></textarea>
+            <br>
+            <label>
+              <input type="checkbox" name="notifications">
+              Receive notifications
+          </label>
+          <br>
+            <input id="m_button" type="submit" value="Register">
+        </form>
+      </h2></div>   
+    </div>    
 </body>
 </html>
