--- a/LAB/Lab2/lab2page3.html
+++ b/LAB/Lab2/lab2page3.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lab2</title>
+    <link rel="stylesheet" type="text/css" href="../Lab2/lab2page3.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <center>
     <img src="https://upload.wikimedia.org/wikipedia/commons/b/b1/IBU_logo_reb-02-01.png" width="50" height="33">
     <h2>International Burch University</h2>
     <h1>Forgot password</h1>
@@ -13,7 +18,9 @@
     <h3>New password</h3>
     <textarea id="New password" name="Enter your password">Enter your password </textarea><br>
     <textarea id="New password" name="Repeat password">Repeat password </textarea><br>
-    <a href="http://localhost/FOFWD-PROJECT/lab2/lab2page1.html">CREATE NEW PASSWORD</a>
-
+    <div link>
+    <a href="http://localhost/FOFWD-PROJECT/LAB/Lab2/lab2page1.html">CREATE NEW PASSWORD</a>
+    </div>
+    </center>
 </body>
 </html>
