--- a/Project/HTML/Page3.html
+++ b/Project/HTML/Page3.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="/Project/CSS/project.css">
+    <link rel="stylesheet" type="text/css" href="./project.css">
   </head>
   <body>
     <center>
