--- a/Project/HTML/Page3.html
+++ b/Project/HTML/Page3.html
@@ -6,28 +6,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="./project.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   </head>
+  <center>
   <body>
-    <center>
-        <img src="https://image.spreadshirtmedia.com/image-server/v1/compositions/T1089A2PA3955PT17X8Y0D1037126804W7933H9524/views/1,width=550,height=550,appearanceId=2,backgroundColor=000000,noPt=true/black-dagger-brotherhood-beanie.jpg">
+    <img src="https://image.spreadshirtmedia.com/image-server/v1/compositions/T1089A2PA3955PT17X8Y0D1037126804W7933H9524/views/1,width=550,height=550,appearanceId=2,backgroundColor=000000,noPt=true/black-dagger-brotherhood-beanie.jpg">
     <div class="navbar">
         <a href="Page1.html">Home</a>
         <a href="Page2.html">Author</a>
         <a href="Page3.html">Forum</a>
-</div>
-    <br>
-    <br>
-    <p>Email:</p>
-    <textarea id="Email" name="Email"> </textarea><br>
-    <p>Username:</p>
-    <textarea id="Username:" name="Username:"> </textarea><br>
-    <p>Password:</p>
-    <textarea id="password:" name="Password:"> </textarea><br>
-    <p>Date of birth:</p>
-    <textarea id="Date of birth:" name="Date of birth:"> </textarea><br>
+        <form>
+          <div class="form-group">
+              <label for="Email">Email address</label>
+              <input type="email" class="form-control" id="Email">
+          </div>
+          <div class="form-group">
+            <label for="Username">Username</label>
+            <input type="username" class="form-control" id="Username">
+        </div>
+          <div class="form-group">
+              <label for="exampleInputPassword1">Password</label>
+              <input type="password" class="form-control" id="exampleInputPassword1">
+          </div>
+          <div class="form-group">
+            <label for="DateOfBirth">Date of Birth</label>
+            <input type="date" class="form-control" id="DateOfBirth">
+        </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+  </div>
     <footer>
         <p>New book being relised on 9.4.2024 The Beloved! Cinci event 13.4.2024!</p>
       </footer>
-    </center>
   </body>
+</center>
 </html>
