--- a/Project/HTML/Page1.html
+++ b/Project/HTML/Page1.html
@@ -5,47 +5,62 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="./project.css">
+    <link rel="stylesheet" href="/Project/CSS/project.css">
+    <link rel="stylesheet" href="project.css">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script&amp;display=swap" rel="stylesheet">
   </head>
   <body>
     <center>
-        <img src="https://image.spreadshirtmedia.com/image-server/v1/compositions/T1089A2PA3955PT17X8Y0D1037126804W7933H9524/views/1,width=550,height=550,appearanceId=2,backgroundColor=000000,noPt=true/black-dagger-brotherhood-beanie.jpg">
-      </center>
-      <center>
+    <header class="header" >
+        <img class="header-img" src="https://i.pinimg.com/564x/a8/e7/13/a8e713613bb9e142f401f06f43986fe7.jpg">
         <div class="navbar">
             <a href="Page1.html">Home</a>
+            <div class="dropdown">
+              <button class="dropbtn">
+                Books
+                <i class="fa fa-caret-down"></i>
+              </button>
+              <div class="dropdown-content">
+                <a href="book1.html">Dark Lover</a>
+                <a href="book2.html">Lover Eternal</a>
+                <a href="book3.html">Lover Awakend</a>
+                <a href="book4.html">Lover Revealed</a>
+                <a href="book5.html">Lover Unbound</a>
+                <a href="book6.html">Lover Enshrined</a>
+              </div>
+            </div>
             <a href="Page2.html">Author</a>
             <a href="Page3.html">Forum</a>
     </div>
-    </center>
+  </header>
+</center>
     <br>
     <br>
     <center>
-    <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/hostedimages/1418492150i/12810599._SX540_.jpg">
-    <img src="https://i.ebayimg.com/images/g/JGoAAOSwaZ1kNNNw/s-l1600.jpg">
-    <p>
-      The warrior (Zsadist) rolled his black eyes. "Come on, man. What does it matter to me? You, Tohr. Britney Spears.
+    
+    <img class="all-books" src="https://i.ebayimg.com/images/g/JGoAAOSwaZ1kNNNw/s-l1600.jpg">
+    <p class="quote">
+      The warrior (Zsadist) rolled his black eyes. "Come on, man. What does it matter to me? You, Tohr. Britney Spears".
       </p>
     </center>
-    <lefth>
-        <p>
+        <p class="book-des">
           The Black Dagger Brotherhood is an ongoing series of paranormal romance books by author J. R. Ward.<br>
-          The series focuses on a society of vampire warriors who live together and defend their race against de-souled humans called lessers.<br>
+          The series focuses on a society of vampire warriors who live together and defend their race against de-souled humans called lessers.
           They are an elite force of military-grade vampires, bred for protecting their race, bonded into brotherhood by hundreds of years of devotion to their King and one another, but each having their own unique story, traits, and abilities.
           In terms of tropes, it has the standard vampire-slayer conflict, except that the world-building around that trope is wildly unexpected. In this world, vampires are a species distinct from humans that are born, not sired.
           Their progenitor is an immortal being known as the Scribe Virgin who is at war with another immortal known as the Omega and is determined to put an end to the vampire race.
           Furthermore, vampires don’t kill or feed on humans; only the blood of their own race can nourish them.
              </p>
-    </lefth>
-    <right>
-        <p>
+      <div class="fan">
+      <img class="fan-book" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/hostedimages/1418492150i/12810599._SX540_.jpg">
+        <p class="fan-words">
           The "Brotherhood" phenomena started with the publishing of Dark Lover in 2005, and like a wildfire, grew to epic proportions within a very short amount of time into a USA Today Bestseller and a New York Times Bestseller hit series.
           Check out the interesting facts behind this lush, exotic world that Ms. J.R. Ward has woven.
              </p>
-    </right>
+            </div>
     <center>
-      <footer>
-          <p>New book being relised on 9.4.2024 The Beloved! Cinci event 13.4.2024!</p>
+      <footer >
+          <p class="footer">New book being relised on 9.4.2024 The Beloved! Cinci event 13.4.2024!</p>
         </footer>
       </center>
   </body>
