--- a/Project/HTML/Page2.html
+++ b/Project/HTML/Page2.html
@@ -5,26 +5,41 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="./project.css">
+    <link rel="stylesheet" href="/Project/CSS/project.css">
+    <link rel="stylesheet" href="project.css">
   </head>
   <body>
     <center>
-        <img src="https://image.spreadshirtmedia.com/image-server/v1/compositions/T1089A2PA3955PT17X8Y0D1037126804W7933H9524/views/1,width=550,height=550,appearanceId=2,backgroundColor=000000,noPt=true/black-dagger-brotherhood-beanie.jpg">
-      </center>
-      <center>
-    <div class="navbar">
-        <a href="Page1.html">Home</a>
-        <a href="Page2.html">Author</a>
-        <a href="Page3.html">Forum</a>
-</div>
+    <header class="header">
+      <img class="header-img" src="https://i.pinimg.com/564x/a8/e7/13/a8e713613bb9e142f401f06f43986fe7.jpg">
+      <div class="navbar">
+          <a href="Page1.html">Home</a>
+          <div class="dropdown">
+            <button class="dropbtn">
+              Books
+              <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+              <a href="book1.html">Dark Lover</a>
+              <a href="book2.html">Lover Eternal</a>
+              <a href="book3.html">Lover Awakend</a>
+              <a href="book4.html">Lover Revealed</a>
+              <a href="book5.html">Lover Unbound</a>
+              <a href="book6.html">Lover Enshrined</a>
+            </div>
+          </div>
+          <a href="Page2.html">Author</a>
+          <a href="Page3.html">Forum</a>
+  </div>
+</header>
 </center>
     <br>
     <br>
     <lefth>
-        <a href="https://jrward.com/"><img src="https://images1.penguinrandomhouse.com/author/223848"></a><br>
+        <a class="autor-img-link" href="https://jrward.com/"><img class="img" src="https://images1.penguinrandomhouse.com/author/223848"></a><br>
     </lefth>
     <right>
-        <p>
+        <p class="author-bio">
           J.R. Ward is the author of over thirty novels, including those in her #1 New York Times and USA Today bestselling series, The Black Dagger Brotherhood.
           There are more than 15 million copies of Ward’s novels in print worldwide and they have been published in 25 different countries around the world.<br><br>
           After graduating from law school, Ward began working in healthcare in Boston and spent many years as Chief of Staff of one of the premier academic medical centers in the nation.
@@ -33,15 +48,15 @@
             </p>
     </right>
     <center>
-      <iframe width="600" height="350" 
+      <iframe class="interview"
         src="https://www.youtube.com/embed/gh3hbMqbJCM?si=d8r-63OMQSWt8nJA" title="YouTube video player" frameborder="0" 
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
           </iframe>
     </center>
     <center>
       <footer>
-          <p>New book being relised on 9.4.2024 The Beloved! Cinci event 13.4.2024!</p>
-        </footer>
+        <p class="footer">New book being relised on 9.4.2024 The Beloved! Cinci event 13.4.2024!</p>
+      </footer>
       </center>
   </body>
 </html>
