--- a/Project/HTML/Page3.html
+++ b/Project/HTML/Page3.html
@@ -31,6 +31,7 @@
           </div>
           <a href="Page2.html">Author</a>
           <a href="Page3.html">Forum</a>
+          <a href="ajax.html">Table</a>
   </div>
 </header>
 <center>
