--- a/Project/HTML/Page2.html
+++ b/Project/HTML/Page2.html
@@ -30,10 +30,12 @@
           </div>
           <a href="Page2.html">Author</a>
           <a href="Page3.html">Forum</a>
+          <a href="ajax.html">Table</a>
   </div>
 </header>
 </center>
     <br>
+    <button onclick="myFunction()">Toggle red mode</button>
     <br>
     <lefth>
         <a class="autor-img-link" href="https://jrward.com/"><img class="img" src="https://images1.penguinrandomhouse.com/author/223848"></a><br>
@@ -58,5 +60,11 @@
         <p class="footer">New book being relised on 9.4.2024 The Beloved! Cinci event 13.4.2024!</p>
       </footer>
       </center>
+      <script>
+        function myFunction() {
+          var element = document.body;
+          element.classList.toggle("red-mode");
+        }
+        </script>
   </body>
 </html>
