--- a/Project/HTML/book2.html
+++ b/Project/HTML/book2.html
@@ -30,8 +30,10 @@
           </div>
           <a href="Page2.html">Author</a>
           <a href="Page3.html">Forum</a>
+          <a href="ajax.html">Table</a>
   </div>
 </header>
+<button onclick="myFunction()">Toggle red mode</button>
 <img class="books" src="https://i.pinimg.com/564x/2b/90/d6/2b90d64e271e65db9e037de6a468052b.jpg">
 <p class="quote">
     "If i can't have you, then you do the taking. Have all of me, part of me, a small piece, whatever you want. Just please, have something."<br>
@@ -49,5 +51,11 @@
     <p class="footer">New book being relised on 9.4.2024 The Beloved! Cinci event 13.4.2024!</p>
   </footer>
 </center>
+<script>
+  function myFunction() {
+    var element = document.body;
+    element.classList.toggle("red-mode");
+  }
+  </script>
 </body>
 </html>
