--- a/Project/HTML/book3.html
+++ b/Project/HTML/book3.html
@@ -30,8 +30,10 @@
           </div>
           <a href="Page2.html">Author</a>
           <a href="Page3.html">Forum</a>
+          <a href="ajax.html">Table</a>
   </div>
 </header>
+<button onclick="myFunction()">Toggle red mode</button>
 <img class="books" src="https://i.pinimg.com/564x/2c/c7/34/2cc734b6d93ca95786b7a86a4d821326.jpg">
 <p class="quote">
     "I was dead until you found me, though I breathed. I was sightless, though I could see. And then you came...and I was awakened."<br>
@@ -49,5 +51,11 @@
     <p class="footer">New book being relised on 9.4.2024 The Beloved! Cinci event 13.4.2024!</p>
   </footer>
 </center>
+<script>
+  function myFunction() {
+    var element = document.body;
+    element.classList.toggle("red-mode");
+  }
+  </script>
 </body>
 </html>
